# smart_pool_v2

./: .gitignore  Makefile  README.md  env.template  firebase_config.json.example  pyproject.toml
src/: main.py
src/database/: __init__.py  analysis_service.py  firebase_auth.py  firebase_config.py  firebase_db.py  local_storage.py  pool_service.py
src/i18n/: en.json  es.json  pt.json  translator.py
src/ml_models/: image_analyzer.py  pool_analyzer.py
src/ui/: layout.py
src/views/: analysis.py  cubic_calculator.py  history.py  home.py  login.py  pools.py  settings.py
