[project]
name = "smart-pool-v2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet>=0.80.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.0",
   "ruff>=0.13.0",
]

[tool.flet]
org = "com.mycompany"
product = "smart-pool-v2"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"